# DSPM-DevSecOps-EphemeralCompute-EvidencePipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
_ci_out/: risk_score_base.json
_ci_out/evidence/: manifest.sha256.json  receipt_maintain.json
_ci_out/scans/: serverless_findings.json
_out/: destroy_closure.json  gate_status.json  policy_results.json
_out/evidence/: manifest.sha256.json  receipt_audit.json  receipt_create.json  receipt_destroy.json
_out_policy/: gate_decision.json
examples/data/: synthetic_datasets.json
examples/data/synthetic/: records.jsonl
examples/iac/bicep_gcp_samples/: azure_functions.bicep  gcp_cloudfunctions.tf
examples/iac/serverless/: serverless.yml
examples/iac/terraform/: main.tf
examples/sample_output/_out/: normalized_assets.json
examples/tenancy/: tenants.yml
notebooks/: 01_Quickstart_Evidence_Pipeline.ipynb  02_Policy_Gating_and_Risk.ipynb  03_CI_Simulation_Evidence_Artifacts.ipynb  colab_cells.py
policies/: policies.yml
scripts/: run_demo.py
src/dspm_devsecops/: cli.py  config.py
src/dspm_devsecops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dspm_devsecops/classification/: pii.py
src/dspm_devsecops/evidence/: manifest.py  receipts.py
src/dspm_devsecops/iac/: serverless_scan.py  terraform_scan.py  trigger_graph.py
src/dspm_devsecops/normalization/: cloud_map.py
src/dspm_devsecops/orchestration/: destroy.py  pipeline.py
src/dspm_devsecops/policy_dsl/: evaluator.py
src/dspm_devsecops/risk/: policy.py  scoring.py
tests/: test_smoke.py
(+6 files in other folders)
